feat: add GMT ECO-CI to actions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -107,6 +107,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: start-measurement
+          send-data: false
       - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -139,9 +144,19 @@ jobs:
           build-args: |
             PACKAGE_SOURCE=internal
           tags: localhost:5000/xrd-centralserver:${{ github.sha }}
+      - name: Central Server test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: get-measurement
+          label: 'Set up Central Server tests'
       - name: Run Central Server system tests
         working-directory: ./src
         run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5000/xrd-centralserver:${{ github.sha }}
+      - name: Test Central Server measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: get-measurement
+          label: 'Test Central Server'
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
@@ -157,6 +172,11 @@ jobs:
         with:
           name: CS System Test screenshots
           path: src/central-server/admin-service/ui-system-test/build/reports/test-automation/selenide-failures/*.png
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: display-results
+          pr-comment: true
   RunSSSystemTests:
     name: Run Security Server system tests
     needs: BuildAndPackageWithUnitTests
@@ -167,6 +187,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: start-measurement
+          send-data: false
       - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -197,9 +222,19 @@ jobs:
           build-args: |
             PACKAGE_SOURCE=internal
           tags: localhost:5000/xrd-securityserver:${{ github.sha }}
+      - name: Security Server test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: get-measurement
+          label: 'Set up Security Server tests'
       - name: Run Security Server system tests
         working-directory: ./src
         run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:system-test:systemTest -PsystemTestSsImageName=localhost:5000/xrd-securityserver:${{ github.sha }}
+      - name: Test Security Server measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: get-measurement
+          label: 'Test Security Server'
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
@@ -222,6 +257,11 @@ jobs:
             src/security-server/system-test/build/ss-container-logs/
             src/security-server/system-test/build/ca-container-logs/
             src/security-server/system-test/build/reports/test-automation/selenide-failures/*.png
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: display-results
+          pr-comment: true
   RunE2ETests:
     name: Run E2E tests
     needs: BuildAndPackageWithUnitTests
@@ -232,6 +272,11 @@ jobs:
         ports:
           - 5000:5000
     steps:
+      - name: Start Measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: start-measurement
+          send-data: false
       # Setup
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -278,6 +323,11 @@ jobs:
           build-args: |
             PACKAGE_SOURCE=internal
           tags: localhost:5000/xrd-securityserver:${{ github.sha }}
+      - name: E2E test setup measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: get-measurement
+          label: 'Set up E2E tests'
       # Execute and report
       - name: Run E2E tests
         working-directory: ./src
@@ -285,6 +335,11 @@ jobs:
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest 
           -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }} 
           -Pe2eTestSSImage=localhost:5000/xrd-securityserver:${{ github.sha }}
+      - name: E2E test measurement
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: get-measurement
+          label: 'E2E tests'
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
@@ -301,3 +356,8 @@ jobs:
           name: E2E report
           path: |
             src/security-server/e2e-test/build/allure-report/
+      - name: Show Energy Results
+        uses: green-coding-solutions/eco-ci-energy-estimation@v4
+        with:
+          task: display-results
+          pr-comment: true
