--- a/src/signer/application/src/main/resources/application-native.yaml
+++ b/src/signer/application/src/main/resources/application-native.yaml
@@ -1,2 +1,16 @@
-logging:
-  config: classpath:logback-native.xml
+quarkus:
+  package:
+    output-directory: libs
+    output-name: signer-1.0
+    jar:
+      type: uber-jar
+      add-runner-suffix: false
+
+  log:
+    console:
+      enable: false
+    file:
+      enable: true
+      path: /var/log/xroad/signer.log
+
+
