--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id("xroad.java-conventions")
     id("xroad.int-test-conventions")
+    alias(libs.plugins.jandex)
 }
 
 project.ext.schemaTargetDir = layout.buildDirectory.dir("generated-sources").get().asFile
@@ -21,38 +22,27 @@ sourceSets {
 }
 
 dependencies {
-    api(platform(libs.springBoot.bom))
-
     implementation project(':common:common-core')
     implementation project(':common:common-jetty')
     implementation project(':common:common-verifier')
     implementation project(':common:common-rpc')
     implementation project(':signer-protocol')
 
-    api("org.springframework:spring-context-support")
-    implementation("org.springframework.boot:spring-boot-starter")
+    implementation(libs.quarkus.scheduler)
 
     // Necessary since there are jars with no adequate Maven dependencies
     api fileTree(dir: '../../libs/pkcs11wrapper', include: '*.jar')
 
     testImplementation project(':common:common-test')
     testImplementation project(path: ':common:common-verifier', configuration: 'testArtifacts')
-    testImplementation 'org.springframework:spring-test'
 
     testImplementation libs.mockito.core
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
 
-    intTestRuntimeOnly project(':addons:hwtoken')
     intTestRuntimeOnly project(':common:common-globalconf')
     intTestImplementation project(":common:common-test")
     intTestImplementation project(":common:common-int-test")
-    intTestImplementation (libs.springBoot.starterTest)
 
     xjc libs.bundles.jaxb
-}
-
-jar {
-    archiveBaseName = 'signer-core'
 }
 
 tasks.register('createDirs') {
