chore: quarkus profile for signer, confclient
Refs: XRDDEV-2751

--- a/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
+++ b/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
@@ -15,6 +15,6 @@ done
 CP="/usr/share/xroad/jlib/configuration-client.jar"
 
 XROAD_CONFCLIENT_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=76m -XX:+ExitOnOutOfMemoryError \
--Dlogback.configurationFile=/etc/xroad/conf.d/confclient-logback-service.xml $XROAD_CONFCLIENT_PARAMS"
+-Dquarkus.profile=native $XROAD_CONFCLIENT_PARAMS"
 
 apply_local_conf XROAD_CONFCLIENT_PARAMS
