--- a/src/packages/src/xroad/common/signer/etc/xroad/services/signer.conf
+++ b/src/packages/src/xroad/common/signer/etc/xroad/services/signer.conf
@@ -17,6 +17,6 @@ done
 CP="/usr/share/xroad/jlib/signer.jar"
 
 XROAD_SIGNER_PARAMS="-Xmx50m -XX:MaxMetaspaceSize=96m \
--Dlogback.configurationFile=/etc/xroad/conf.d/signer-logback.xml $XROAD_SIGNER_PARAMS"
+-Dquarkus.profile=native,secret-store $XROAD_SIGNER_PARAMS"
 
 apply_local_conf XROAD_SIGNER_PARAMS
