feat: add remove token functionality for the security server admin in the ui
Refs: XRDDEV-2622

--- a/src/security-server/admin-service/application/src/main/resources/permissions.yml
+++ b/src/security-server/admin-service/application/src/main/resources/permissions.yml
@@ -77,6 +77,7 @@
 -   delete_sign_key: [XROAD_SECURITY_OFFICER, XROAD_REGISTRATION_OFFICER]
 -   edit_key_friendly_name: [XROAD_SECURITY_OFFICER, XROAD_REGISTRATION_OFFICER, XROAD_SYSTEM_ADMINISTRATOR]
 -   edit_token_friendly_name: [XROAD_SECURITY_OFFICER, XROAD_REGISTRATION_OFFICER, XROAD_SYSTEM_ADMINISTRATOR]
+-   delete_token: [XROAD_SYSTEM_ADMINISTRATOR]
 -   create_api_key: [XROAD_SYSTEM_ADMINISTRATOR]
 -   view_api_keys: [XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 -   update_api_key: [XROAD_SYSTEM_ADMINISTRATOR]
