feat: secret-store-local (openbao) package support
Refs: XRDDEV-2829

--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -7,30 +7,23 @@ ADDON_PATH="/usr/share/xroad/jlib/addon"
 
 umask 0027
 
-if [ -f /var/run/xroad/xroad-grpc-internal-env.properties ]; then
-  set -a
-  . /var/run/xroad/xroad-grpc-internal-env.properties
-  set +a
-fi
-
 export LD_LIBRARY_PATH="/usr/share/xroad/lib:$LD_LIBRARY_PATH"
 
-load_from_properties () {
+load_from_properties() {
   if [ -f /etc/xroad/services/local.properties ]; then
-    while IFS='=' read -r key value
-    do
+    while IFS='=' read -r key value; do
       if [ -n "$key" ] && [ -n "$value" ] && [[ $key != \#* ]]; then
         case $key in
-          XROAD_* )
-            printf -v "${key}" '%s' "${value}"
-            ;;
-          *)
-            #ignored
-            echo "WARNING: overriding $key ignored" >&2
-            ;;
+        XROAD_*)
+          printf -v "${key}" '%s' "${value}"
+          ;;
+        *)
+          #ignored
+          echo "WARNING: overriding $key ignored" >&2
+          ;;
         esac
       fi
-    done < /etc/xroad/services/local.properties
+    done </etc/xroad/services/local.properties
   fi
 }
 
@@ -63,7 +56,28 @@ apply_local_conf() {
   fi
 }
 
-load_from_properties
-
 XROAD_PARAMS="-XX:+UseG1GC -Dfile.encoding=UTF-8 -Xshare:auto -Djdk.tls.ephemeralDHKeySize=2048 \
 -Djavax.xml.accessExternalDTD=\"\" -Djavax.xml.accessExternalStylesheet=\"\" $XROAD_PARAMS"
+
+# Detect package manager and check for xroad-center
+detect_deployment_type() {
+  local detected_application_type
+
+  # Check for central server specific directories/files
+  if [ -f "/etc/xroad/services/centralserver-admin-service.conf" ]; then
+    detected_application_type="cs"
+  else
+    detected_application_type="ss"
+  fi
+
+  echo "Detected X-Road deployment type: $detected_application_type"
+  EXPORT XROAD_QUARKUS_PROFILES=native,${detected_application_type}
+}
+
+if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
+  source /etc/xroad/services/secret-store-local.conf
+fi
+
+load_from_properties
+detect_deployment_type
+
