Revert "feat: dynamic memory allocation for proxy-server"
This reverts commit ad32823bfc51c294efb8ee7fe76fce260a635f33.

--- a/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
+++ b/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
@@ -19,7 +19,7 @@ done
 
 CP="/usr/share/xroad/jlib/proxy.jar"
 
-XROAD_PROXY_PARAMS=" -XX:MaxMetaspaceSize=140m \
+XROAD_PROXY_PARAMS=" -Xms100m -Xmx512m -XX:MaxMetaspaceSize=140m \
 -Djavax.net.ssl.sessionCacheSize=10000 \
 -Dlogback.configurationFile=/etc/xroad/conf.d/proxy-logback.xml \
 -Dxroad.proxy.clientHandlers=${CLIENT_HANDLERS#?} \
@@ -27,15 +27,3 @@ XROAD_PROXY_PARAMS=" -XX:MaxMetaspaceSize=140m \
 -Dxroad.proxy.serverRestServiceHandlers=${SERVICE_REST_HANDLERS#?} $XROAD_PROXY_PARAMS"
 
 apply_local_conf XROAD_PROXY_PARAMS
-
-xms_max="${XROAD_PROXY_XMS_MAX:-2000}"
-xms_min=100
-xms_cfg=("4000:50" "8000:64" "16000:125")
-
-xmx_max="${XROAD_PROXY_XMX_MAX:-16000}"
-xmx_min=512
-xmx_cfg=("4000:125" "8000:250" "16000:500" "31000:516")
-
-memory_config=$(build_xm_args "$XROAD_PROXY_PARAMS")
-
-XROAD_PROXY_PARAMS="$memory_config $XROAD_PROXY_PARAMS"
