feat: Use Quarkus in confclient service.
This additionally backports anchor and system http endpoint migration to grpc.

Refs: XRDDEV-2829

--- a/src/common/common-properties/src/main/resources/xroad-logging.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-logging.yaml
@@ -1,6 +1,9 @@
 quarkus:
   log:
     level: INFO
+    category:
+      "ee.ria.xroad.common.SystemPropertiesLoader":
+        level: "OFF" #TODO remove this one SystemPropertiesLoader is removed
     file:
       format: "%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} %-5p [%t] %c{1.} - %s%e%n"
       encoding: UTF-8
