--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -71,7 +71,7 @@ detect_deployment_type() {
   fi
 
   echo "Detected X-Road deployment type: $detected_application_type"
-  EXPORT XROAD_QUARKUS_PROFILES=native,${detected_application_type}
+  export XROAD_QUARKUS_PROFILES="native,${detected_application_type}"
 }
 
 if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
