--- a/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
+++ b/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
@@ -5,16 +5,8 @@
 
 . /etc/xroad/services/global.conf
 
-for addon in "${ADDON_PATH}"/confclient/*.conf
-do
- if [ -e "${addon}" ]; then
-  . "${addon}"
- fi
-done
-
-CP="/usr/share/xroad/jlib/configuration-client.jar"
-
 XROAD_CONFCLIENT_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=50m -XX:+ExitOnOutOfMemoryError \
--Dlogback.configurationFile=/etc/xroad/conf.d/confclient-logback-service.xml $XROAD_CONFCLIENT_PARAMS"
+-Dquarkus.profile=${XROAD_QUARKUS_PROFILES} ${XROAD_CONFCLIENT_PARAMS}"
+
 
 apply_local_conf XROAD_CONFCLIENT_PARAMS
