--- a/src/security-server/admin-service/application/src/test/resources/application.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     generate-ddl: true
     show-sql: false
     defer-datasource-initialization: true
+  cloud:
+    vault:
+      enabled: false
   profiles:
     active: test
 
