--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -14,6 +14,8 @@ ij_continuation_indent_size  = 8
 ij_java_imports_layout = ee.ria.xroad.**,|,*,|,javax.**,|,java.**,|,$*
 ij_java_class_count_to_use_import_on_demand = 999
 ij_java_names_count_to_use_import_on_demand = 999
+ij_java_blank_lines_after_imports = 1
+ij_java_blank_lines_before_imports = 1
 
 [*.{xml,xsd,gradle}]
 indent_size = 4
