--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ jackson = "2.18.2"
 mockito = "5.15.2"
 springBoot = "3.3.7"
 junitJupiter = "5.11.4"
+junit5SystemExit = "2.0.2"
 xmlUnit = "2.10.0"
 bouncyCastle = "1.80"
 slf4j = "2.0.16"
@@ -29,7 +30,7 @@ protobufPlugin = "0.9.4"
 checkstyle = "10.21.1"
 jacoco = "0.8.12"
 
-quarkus = "3.17.8"
+quarkus = "3.18.1"
 quarkus-vault = "4.1.0"
 
 [libraries]
@@ -70,6 +71,7 @@ quarkus-extension-vault = { group = "io.quarkiverse.vault", name = "quarkus-vaul
 junit-jupiterEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junitJupiter" }
 junit-vintageEngine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junitJupiter" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junitJupiter" }
+junit-system-exit = { module = "com.ginsberg:junit5-system-exit", version.ref = "junit5SystemExit" }
 
 xmlunit-core = { module = "org.xmlunit:xmlunit-core", version.ref = "xmlUnit" }
 xmlunit-matchers = { module = "org.xmlunit:xmlunit-matchers", version.ref = "xmlUnit" }
