--- a/src/security-server/ds/extensions/data-plane/xroad-data-plane-iam/build.gradle
+++ b/src/security-server/ds/extensions/data-plane/xroad-data-plane-iam/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation(platform(libs.springBoot.bom))
     implementation libs.edc.dataplane.iam
     implementation libs.edc.core.token
+    implementation libs.edc.lib.token
 
     implementation(project(':signer-protocol'))
 
