chore: force Jboss logging usage in tests and runtime
Refs: XRDDEV-2829

--- a/src/common/common-properties/src/main/resources/xroad-logging.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-logging.yaml
@@ -2,6 +2,10 @@ quarkus:
   log:
     level: INFO
     category:
+      "io.quarkus":
+        level: DEBUG #TODO should be reduced to INFO once development is done
+      "io.smallrye":
+        level: DEBUG #TODO should be reduced to INFO once development is done
       "ee.ria.xroad.common.SystemPropertiesLoader":
         level: "OFF" #TODO remove this one SystemPropertiesLoader is removed
     file:
