--- a/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
+++ b/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
@@ -6,6 +6,7 @@
 . /etc/xroad/services/global.conf
 
 XROAD_CONFCLIENT_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=50m -XX:+ExitOnOutOfMemoryError \
+-Djava.util.logging.manager=org.jboss.logmanager.LogManager \
 -Dquarkus.profile=${XROAD_QUARKUS_PROFILES} ${XROAD_CONFCLIENT_PARAMS}"
 
 
