chore: enable local.yaml externalized configuration
Refs: XRDDEV-2829

--- a/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
+++ b/src/service/configuration-client/configuration-client-application/src/main/resources/application.yaml
@@ -1,22 +1,17 @@
 quarkus:
   application:
     name: configuration-client
-  scheduler:
-    start-mode: forced
   config:
     locations:
       - xroad-common.yaml
       - xroad-logging.yaml
+  scheduler:
+    start-mode: forced
+  quartz:
+    thread-count: 3
 
 "%containerized":
-   xroad:
-     configuration-client:
-       rpc:
-         listen-address: 0.0.0.0
-
-"%native":
-  quarkus:
-    log:
-      file:
-        enable: true
-        path: /var/log/xroad/configuration_client.log
+  xroad:
+    configuration-client:
+      rpc:
+        listen-address: 0.0.0.0
