--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -20,7 +20,7 @@ logging:
 xroad:
   common:
     rpc:
-      use-tls: true
+      use-tls: false #TODO disabled until all components are ready
       certificate-provisioning:
         secret-store-pki-path: xrd-pki
         issuance-role-name: xrd-rpc-internal
