feat: help configure proxy memory allocation
Refs: XRDDEV-55

--- a/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
+++ b/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
@@ -19,7 +19,7 @@ done
 
 CP="/usr/share/xroad/jlib/proxy.jar"
 
-XROAD_PROXY_PARAMS=" -Xms100m -Xmx512m -XX:MaxMetaspaceSize=140m \
+XROAD_PROXY_PARAMS=" $(/usr/share/xroad/scripts/proxy_memory_helper.sh 'get-default') -XX:MaxMetaspaceSize=140m \
 -Djavax.net.ssl.sessionCacheSize=10000 \
 -Dlogback.configurationFile=/etc/xroad/conf.d/proxy-logback.xml \
 -Dxroad.proxy.clientHandlers=${CLIENT_HANDLERS#?} \
