--- a/src/packages/src/xroad/common/monitor/etc/xroad/services/monitor.conf
+++ b/src/packages/src/xroad/common/monitor/etc/xroad/services/monitor.conf
@@ -7,17 +7,9 @@ XROAD_LOG_LEVEL="INFO"
 
 . /etc/xroad/services/global.conf
 
-for addon in "${ADDON_PATH}"/monitor/*.conf
-do
- if [ -e "${addon}" ]; then
-  . "${addon}"
- fi
-done
-
-CP="/usr/share/xroad/jlib/monitor.jar"
-
 XROAD_MONITOR_PARAMS=" -Xmx256m -XX:MaxMetaspaceSize=100m \
+-Djava.util.logging.manager=org.jboss.logmanager.LogManager \
 -Dserverconf.hibernate.hikari.maximumPoolSize=1 \
--Dlogback.configurationFile=/etc/xroad/conf.d/addons/monitor-logback.xml $XROAD_MONITOR_PARAMS"
+-Dquarkus.profile=${XROAD_QUARKUS_PROFILES} $XROAD_MONITOR_PARAMS"
 
 apply_local_conf XROAD_MONITOR_PARAMS
