chore: quarkus config locations fix
Refs: XRDDEV-2829

--- a/src/service/monitor/monitor-application/src/main/resources/application.yaml
+++ b/src/service/monitor/monitor-application/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ quarkus:
     name: monitor
   config:
     locations:
+      - /etc/xroad/conf.d/local.yaml
       - xroad-common.yaml
       - xroad-logging.yaml
 
