chore: further work on quarkus within confclient

--- a/src/common/common-properties/src/main/resources/xroad-logging.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-logging.yaml
@@ -3,7 +3,7 @@ quarkus:
     level: INFO
     category:
       "io.quarkus":
-        level: DEBUG #TODO should be reduced to INFO once development is done
+        level: INFO #TODO should be reduced to INFO once development is done
       "io.smallrye":
         level: DEBUG #TODO should be reduced to INFO once development is done
       "ee.ria.xroad.common.SystemPropertiesLoader":
